--- a/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/rangarAmAnujaH/01.md
+++ b/kauShItakam/kauShitaki-shAnkhAyana-brAhmaNam/upaniShat/rangarAmAnujaH/01.md
@@ -48,7 +48,17 @@ title = "०१"
 
 \[प्रथमोऽध्यायः\]
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 हरिः ओम् । चित्रो ह वै गार्ग्यायणिर्यक्ष्यमाण आरुणिं वव्रे ॥ **१** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+हरिः ओम् । चित्रो ह वै गार्ग्यायणिर्यक्ष्यमाण आरुणिं वव्रे ॥ **१** ॥
+</details>
 
 प्रकाशिका  
 श्रीमद्रङ्गरामानुजमुनीन्द्रानुगृहीता  
@@ -64,40 +74,120 @@ title = "०१"
 अर्चिरादिगति तत्प्राप्यदेशविशेष - तद्विशिष्टब्रह्मानुभवप्रकारोपदेशाय आख्यायिकेयमारभ्यते - चित्रो  
 ह......वव्रे। नाम्ना चित्रः गार्ग्यस्यापत्यं गार्ग्यायणिः क्षत्रियः आरुणिं गौतमं याजनाय प्रार्थितवान् इत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स ह पुत्रं श्वेतकेतुं प्रजिघाय, याजयेति ॥ **२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स ह पुत्रं श्वेतकेतुं प्रजिघाय, याजयेति ॥ **२** ॥  
+</details>
 स तु श्वेतकेतुनामानं पुत्रं, त्वमेव गत्वा याजयेति प्राहिणोत् - प्रेषितवान् इत्यर्थः ॥
 
 तं हासीनं पप्रच्छ, गौतमस्य पुत्र ! अस्ति संवृतं लोके यस्मिन् मा धास्यस्यन्यमहो  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वाऽध्वा तस्य यस्मिन् ? लोके धास्यसीति ॥ **३** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+वाऽध्वा तस्य यस्मिन् ? लोके धास्यसीति ॥ **३** ॥
+</details>
 
 हे गौतमपुत्र ! यस्मिन् लोके मां वा अन्यं वा यज्ञाद्यनुष्ठापनेन स्थापयिष्यसि, तस्मिन् लोके  
 रहस्यमुपदेश्यं किञ्चिदस्ति किम् ? यस्मिन् लोके मां स्थापयिष्यसि, स्थापयितुमिच्छसि, तस्याध्वा वा कश्चिदान  
 किमित्यर्थः ॥
 
 स होवाच, नाहमेतत् वेद, हन्ताचार्यं पृच्छानीति । स ह पितरमासाद्य  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पप्रच्छ ॥ **४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पप्रच्छ ॥ **४** ॥  
+</details>
 स्पष्टोऽर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 इति ह माऽप्राक्षीत् ; कथं प्रतिब्रवाणीति ॥ **५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+इति ह माऽप्राक्षीत् ; कथं प्रतिब्रवाणीति ॥ **५** ॥  
+</details>
 इतीत्येतत् उक्तार्थप्रकारवचनम् । एवंप्रकारेण मां पृष्टवान् ; कथमस्योत्तरं ददामीति॥
 
 स होवाच, अहमप्येतन्न वेद । सदस्येव वयं स्वाध्यायमधीत्य हवामहे यत्र:  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 परे ददति, एह्युभौ गमिष्याव इति ॥ **६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+परे ददति, एह्युभौ गमिष्याव इति ॥ **६** ॥  
+</details>
 स ह...... गमिष्याव इति अहमपि न जाने । गुरुं रहसि गत्वा रहस्यान् अर्थान् पृष्ट्वा सदस्येव  
 स्वाध्यायमधीत्य परे यजमानाय यत् द्रव्यं होतव्यमिति प्रयच्छन्ति, तत् जुहुमः । अस्माकं रहस्यार्थपर्यन्तज्ञान  
 नास्ति । त्वमप्यागच्छ । आवाभ्यां गत्वा स प्रष्टव्य इत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स ह समित्पाणिश्चित्रं गार्ग्यायणिप्रतिचक्रम, उपायानीति ॥ **७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स ह समित्पाणिश्चित्रं गार्ग्यायणिप्रतिचक्रम, उपायानीति ॥ **७** ॥  
+</details>
 समिद्भारहस्तस्सन् चित्रनाम्नः क्षत्रियस्य समीपे, शिष्यस्सन् उपगच्छामीति प्रववृते ॥
 
 तं होवाच - ब्रह्मार्ध्योऽसि गौतम ! यो न मानमुपागाः । एहि व्येव त्वा  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ज्ञापयिष्यामीति ॥ **८** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+ज्ञापयिष्यामीति ॥ **८** ॥
+</details>
 
 यस्त्वमभिमान नोपागाः - त्यक्ताभिमान एव सन् शिष्योऽहमित्यागतोऽसि, स त्वं ब्रह्मार्ध्योऽसि ।  
 ब्रह्मत्वेन - ब्राह्मणत्वेन अर्ध्योऽसि - पूज्योऽसि । ब्राह्मणस्त्वं क्षत्रियेण मया उपनीय शिष्यभावं  
 प्रापयितुमयोग्यः । तूष्णीमेवाऽऽयाहि, त्वां ब्रह्म विज्ञापयिष्यामि इति ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स होवाच - ये वै के चास्माल्लोकात् प्रयन्ति, चन्द्रमसमेव ते सर्वे गच्छन्ति ॥ **९**॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+स होवाच - ये वै के चास्माल्लोकात् प्रयन्ति, चन्द्रमसमेव ते सर्वे गच्छन्ति ॥ **९**॥
+</details>
 
 स ह...... गच्छन्तीति । ये केचन इष्टापूर्तादिकारिणः विद्वांसश्च, ते सर्वे चन्द्रमसं गच्छन्तीत्यर्थः ।  
 इयांस्तु विशेषः - इष्टादिकारिणस्तु धूमरात्र्यपरपक्षदक्षिणायनपितृलोकाकाशक्रमेण चन्द्रमसमायान्ति ।  
@@ -134,7 +224,17 @@ title = "०१"
 तृतीयेनोद्भिज्जशब्देनावरोधः - संग्रहो विद्यत इत्यर्थः । अतः केवलपापकर्मणां चन्द्रप्राप्तिर्न भवतीति स्थितम् ।  
 प्रकृतमनुसरामः॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तेषां प्राणैः पूर्वपक्ष आप्यायते । तानपरपक्षेण प्रजनयति ॥ **१०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तेषां प्राणैः पूर्वपक्ष आप्यायते । तानपरपक्षेण प्रजनयति ॥ **१०** ॥  
+</details>
 तेषाम् - इष्टादिकारिणां प्राणैः - इन्द्रियैः मनोहस्तादीन्द्रियजन्यदानहोमादिभिः पूर्वपक्षे चन्द्रः  
 आप्यायते - संवर्ध्यते । ओ प्यायी वृद्धौ (धा.पा. ४८८) इति हि धातुः । अग्नौ हुतञ्च दत्तञ्च सर्व  
 सोमगतं भवेत् इति स्मरणात् । तान् - इष्टादिकारिणः अपरपक्षेण - पञ्चदशभिर्दिनैः प्रजनयति -  
@@ -142,13 +242,33 @@ title = "०१"
 प्रजनयति इत्यत्र प्रजनयतीत्यस्य गन्धं ग्राहयतीत्यर्थपरत्वदर्शनाद् इहापि प्रजनयतीत्यस्य ग्राहयतीत्यर्थ  
 उपपद्यते । अपरपक्षेनेति पाठे णत्वाभावश्छान्दसः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 एतद्वै स्वर्गस्य लोकस्य द्वारं यश्चन्द्रमाः ॥ **११** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+एतद्वै स्वर्गस्य लोकस्य द्वारं यश्चन्द्रमाः ॥ **११** ॥  
+</details>
 स्वर्गस्य लोकस्य - भगवल्लोकस्य द्वारं दौवारिकप्राय इत्यर्थः ॥
 
 \[जीवस्य नानाविधयोनिषु जननम् \]  
 तं यः प्रत्याह, तमतिसृजते । य एनं न प्रत्याह, तमिह वृष्टिभूत्वा वर्षति । स  
 इह कीटो वा पतङ्गो वा शकुनिर्वा शार्दूलो वा सिंहो वा मत्स्यो वा परस्वान् वा  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पुरुषो वाऽन्यो वैतेषु स्थानेषु प्रत्याजायते ॥ **१२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पुरुषो वाऽन्यो वैतेषु स्थानेषु प्रत्याजायते ॥ **१२** ॥  
+</details>
 य एनं न...... प्रत्याजायते । चन्द्रः स्वप्रश्नस्य यः सदुत्तरं प्रयच्छति, तमतिसृजते -  
 भगवल्लोकगमनाय तमनुजानाति । यस्तु प्रतिवक्तुमशक्तः, तम् अविद्वांसम् , यावत्संपातमुषित्वा  
 अथैतमेवाध्वानं पुनर्निवर्तन्ते यथेतमाकाशमाकाशाद्वायुम् । वायुर्भूत्वा धूमो भवति धूमो भूत्वा अभं भवति ।  
@@ -158,12 +278,32 @@ title = "०१"
 सूकरयोनि वा चण्डालयोनि वा । (छा.उ, ५-१०-७) इति श्रुत्यर्थोऽत्रानुसन्धेयः । परस्वान् - पशुविशेषः ।  
 एतेषु स्थानेषु जायते ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 यथाकर्म यथाविद्यं तमागतं पृच्छति, कोऽसीति । तं प्रतिब्रूयात् ॥ **१३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+यथाकर्म यथाविद्यं तमागतं पृच्छति, कोऽसीति । तं प्रतिब्रूयात् ॥ **१३** ॥  
+</details>
 इष्टादिकर्मानुसारेण वा ब्रह्मविद्यानुसारेण वा आगतं पुमासं पृच्छति कोऽसीति । तं प्रतिब्रूयात् । त  
 वक्ष्यमाणप्रकारेण यः प्रतिब्रूयात् , तमतिसृजत इत्युत्तरेणान्वयः ॥
 
 \[प्रकृतिविविक्तात्पस्वरूपम् ।  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विचक्षणादृतवो रेत आभृतं पञ्चदशात् प्रसूतात् पित्र्यावतस्तस्मात् ॥ **१४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विचक्षणादृतवो रेत आभृतं पञ्चदशात् प्रसूतात् पित्र्यावतस्तस्मात् ॥ **१४** ॥  
+</details>
 प्रतिवचनप्रकारमाह विचक्षणात्...... तस्मात् । मासादिकालपरिच्छेदकत्वात् चन्द्रस्य ऋतुशब्देन  
 संबोधनम् । एकस्मिन् औपचारिको बहुवचनप्रयोगः । दिवसपूर्वपक्षोत्तरायणादिलक्षण-  
 कालाभिमानिदेवतासाहित्याभिप्रायेण वा ऋतव इति बहुवचनप्रयोगः । हे ऋतवः । कालप्रवर्तकाः इत्यर्थः ।  
@@ -173,27 +313,77 @@ title = "०१"
 आभृतं - शोणितेन संभृतं रेतोऽस्मि । रेतश्शरीरकः अहमित्यर्थः । अनेन पञ्चाग्निविद्याप्रकारोपन्यासात्  
 स्वस्य प्रकृतिविविक्तात्मस्वरूपमुपन्यस्तं भवति ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 पुंसि कर्तरि मेरयध्वम् । पुंसा क; मातरि मा निषिक्तम् ॥ **१५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+पुंसि कर्तरि मेरयध्वम् । पुंसा क; मातरि मा निषिक्तम् ॥ **१५** ॥  
+</details>
 हे ऋतवः ! यूयमितः परं निषेककर्तरि पुंसि रेतोरूपतया अवस्थानाय मेरयध्वम् - मा प्रेषयत । प्रेषणं  
 मा कुरुत इत्यर्थः । उत्तरत्र मा इत्यस्य अत्राप्यनुषङ्गः । पुंसा निषेककर्त्रा मम शरीरपरिग्रहाय (मातरि मा  
 निषिक्तम् ) निषेकं मा कुरुत । छान्दसः शपो लुक् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स जायमुपजायमानो द्वादशत्रयोदशोपमासः ॥ **१६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स जायमुपजायमानो द्वादशत्रयोदशोपमासः ॥ **१६** ॥  
+</details>
 सोऽहं जायं - जनित्वा - आभीक्ष्ण्ये णमुल्, गर्भे गर्भे जनित्वा जनित्वा उपजायमान: - गर्भात्  
 निर्गच्छन् द्वादश त्रयोदशो वा उपमासः अन्तिममासो यस्य सः द्वादशत्रयोदशोपमासः । यद्यपि  
 मनुष्याणां गर्भे दशैव मासाः, अथापि योनिविशेषेषु द्वादशत्रयोदशमासपर्यन्तस्थितिरस्तीति तथोक्तम्।  
 द्वादश वा त्रयोदश वा मासान् गर्भे उषित्वेत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 द्वादशत्रयोदशेन पित्राऽऽसं तद्विदेऽहं प्रति तद्विदेऽहम् ॥ **१७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+द्वादशत्रयोदशेन पित्राऽऽसं तद्विदेऽहं प्रति तद्विदेऽहम् ॥ **१७** ॥  
+</details>
 अहं द्वादशेन वा त्रयोदशेन वा मासेन पित्रा आसं - प्रादुरासम् । पितृशब्दः मातुरप्युपलक्षकः । तद्विदे  
 प्रति तद्विदे । अत्र तच्छब्दः पूर्वोक्तरेतःपरामर्शी । तद्विदे - रेतस्सिचे । तद्विदे प्रति -  
 प्रतिरेतस्सिक् -पुरुषमित्यर्थः । चतुर्थी तादार्थ्यार्था । तेषां पितॄणां शेषभूत एवासमित्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तन्मा ऋतवो मर्त्यव आभरध्वम् ॥ **१८** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तन्मा ऋतवो मर्त्यव आभरध्वम् ॥ **१८** ॥  
+</details>
 हे ऋतव ! इति पूर्वतत् संबोधनम् । तत् - तस्मात् कारणात् मर्त्यवे - मृत्यवे जननमरणलक्षणसंसाराय  
 मा आभरध्वम् - इतः परं मा समर्पयत ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तेन सत्येन तपसर्तुरस्म्यार्तवोऽस्मि कोऽस्मि त्वमस्मीति ॥ **१९** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तेन सत्येन तपसर्तुरस्म्यार्तवोऽस्मि कोऽस्मि त्वमस्मीति ॥ **१९** ॥  
+</details>
 तत्र हेतुमाह तेन सत्येन......त्वमस्मीति । तस्मान्न्यासमेषां तपसामतिरिक्तमाहुरिति श्रुतेः  
 तच्छरणवरणलक्षणेन तपसा प्रसन्नेन तेन सत्येन - परमात्मना अनुगृहीतस्सन् ऋतुरस्मि -  
 मासर्तुसंवत्सरयुगात्मककालरूपोऽहमस्मि । आर्तवोऽस्मि - तत्तत्कालवर्तिपदार्थरूपोऽप्यहमस्मि । कोऽस्मि -  
@@ -201,13 +391,33 @@ title = "०१"
 इति वामदेववाक्यवत् , तं मामायुरमृतमित्युपास्स्व इति इन्द्रवाक्यवच स्वात्मभूतपरमात्मपरः ।  
 साक्षात्कृतसर्वैकात्म्योऽहमस्मीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तमतिसृजते ॥ **२०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तमतिसृजते ॥ **२०** ॥  
+</details>
 तमतिसृजते - एवं यः प्रतिब्रूयात् , तं ब्रह्मवित्त्वेन ब्रह्मलोकगमनार्हतां ज्ञात्वा गमनाय  
 अनुजानातीत्यर्थः ॥
 
 \[ब्रह्मविदः अर्चिरादिगतिवर्णनम् \]  
 स एतं देवयानं पन्थानमापद्याग्निलोकमागच्छति स वायुलोकं स वरुणलोकं  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स आदित्यलोकं स इन्द्रलोकं स प्रजापतिलोकं स ब्रह्मलोकम् ॥ **२१** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+स आदित्यलोकं स इन्द्रलोकं स प्रजापतिलोकं स ब्रह्मलोकम् ॥ **२१** ॥
+</details>
 
 एवं ब्रह्मविचन्द्रमस्संवादप्रकारं प्रदर्श्य आदित आरभ्य अर्चिरादिगतिक्रमम् उपदिशति । सः -  
 ब्रह्मवित् देहवियोगकाल एव सुकृतदुष्कृते विधूय देवयानमार्ग आपद्य - अवलम्ब्य अग्निलोकमागच्छति ।  
@@ -244,69 +454,229 @@ title = "०१"
 गमयितृत्वसंभवादिति स्थितम् । प्रकृतमनुसरामः ॥
 
 \[ब्रह्मलोकवर्णनम् \]  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तस्य हवा एतस्य ब्रह्मलोकस्यारो ह्रदः मुहूर्ता यष्टिहा: ॥ **२२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तस्य हवा एतस्य ब्रह्मलोकस्यारो ह्रदः मुहूर्ता यष्टिहा: ॥ **२२** ॥  
+</details>
 तस्य - ब्रह्मलोकस्य समीपे अरसंज्ञकिो ह्रदः । छान्दोग्ये, अरश्च ण्यश्चार्णवौ ब्रह्मलोके ऐरम्मदीयं  
 सरः (छां.उ. ८-५-३) इति सरस्त्रयमुक्तम् । ततः परस्तादविदूरे मुहूर्तसंज्ञकाः यष्टिहाः । यष्टिभि:  
 अब्रह्मविदो गन्तृृन् घ्नन्तीति यष्टिहाः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विरजा नदी ॥ **२३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विरजा नदी ॥ **२३** ॥  
+</details>
 विजरेति संज्ञावती नदी । विरजा नदीत्यपि पाठोऽस्ति । जरारजोविरोधित्वात् विजरा विरजेत्युच्यते॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तिल्यो वृक्षः ॥ **२४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तिल्यो वृक्षः ॥ **२४** ॥  
+</details>
 ततोऽविदूरे तिल्यसंज्ञकिो वृक्षः । छान्दोग्ये, तदश्वत्थः सोमसवनः (छां.उ. ८-५-३) इति सोमसवन  
 संज्ञकोऽश्वत्थो वृक्ष उक्तः॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सालज्यं संस्थानं ॥ **२५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सालज्यं संस्थानं ॥ **२५** ॥  
+</details>
 सालज्यनामकं संस्थानं - स्थानीयम् । स्थानीयं निगमोऽन्यत्तु यन्मूलनगराद्वहिः (अ.को. २-२-१)  
 इत्यमरः । सालेषु प्राकारेषु ज्या युद्धसाधनं यस्य तत् सालज्यम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अपराजितमायतनम् ॥ **२६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अपराजितमायतनम् ॥ **२६** ॥  
+</details>
 अपराजिता पूः ब्रह्मणः (छां.उ. ८-५-७) इति श्रवणात् अपराजितसंज्ञकमायतनं पुरमित्यर्थः ।  
 अब्रह्मविद्भिर्न जीयत इत्यपराजितम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 इन्द्रप्रजापती द्वारगोपौ ॥ **२७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+इन्द्रप्रजापती द्वारगोपौ ॥ **२७** ॥  
+</details>
 इन्द्रप्रजापतिसंज्ञकौ पट्टणद्वारपालकौ ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विभुप्रमितम् ॥ **२८** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+विभुप्रमितम् ॥ **२८** ॥
+</details>
 
 अत्र मण्टपमिति शेषः । विभुत्वेन अतिविस्तृतत्वेन प्रमितं हिरण्मयमण्टपमित्यर्थः । प्रभुविमितं  
 हिरण्मयम् (छां.उ. ८-५-७) इति छान्दोग्योक्तेः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विचक्षणा आसन्दी ॥ **२९** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विचक्षणा आसन्दी ॥ **२९** ॥  
+</details>
 विचक्षणसंज्ञिका आसन्दी - धर्मादिपीठम् इत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अमितौजाः पर्यङ्कः ॥ **३०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+अमितौजाः पर्यङ्कः ॥ **३०** ॥  
+</details>
 अमितौजा नाम योगपर्यङ्कः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रिया च मानसी प्रतिरूपा च चाक्षुषी पुष्पाण्यपचयतः ॥ **३१** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+प्रिया च मानसी प्रतिरूपा च चाक्षुषी पुष्पाण्यपचयतः ॥ **३१** ॥  
+</details>
 मनोधिष्ठात्री नाम्ना प्रिया च, चक्षुरधिष्ठात्री नाम्ना प्रतिरूपा च पुष्पाणि अपचयतः कुसुमानि  
 देव्यौ ॥
 
 यतो वै च जगत्यम्बाश्चाम्बावयवाश्चाप्सरसोऽम्बया नद्यः । तमित्थंवित्  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आगच्छति ॥ **३२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+आगच्छति ॥ **३२** ॥  
+</details>
 तादृशब्रह्मलोकं एतादृशस्वरूपविदागच्छति ॥
 
 तं ब्रह्माह - अभिधावत मम यशसा विरजां (विजरां) वाऽयं नदीं प्रापत् । न  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वाऽयं जिगीष्यतीति ॥ **३३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+वाऽयं जिगीष्यतीति ॥ **३३** ॥  
+</details>
 यूयं ते ब्रह्मविदमागच्छन्तं अभिधावत - अभिगच्छत - प्रत्युत्थानं कुरुत । मम यशसा  
 ममानुग्रहेणायं ब्रह्मवित् विरजां नदीं - विरजानदीसमीपं प्राप्तवान् । विरजानदीसंबन्धात् इतः परं  
 विरजामेष्यतीति परमात्मा अप्सरसः प्रतिवदति इत्यर्थः ॥
 
 तं पञ्च शतान्यप्सरसां प्रतिधावन्ति, शतं मालाहस्ताः, शतमञ्जनहस्ताः, शतं  
 चूर्णहस्ताः, शतं वासोहस्ताः, शतं फणहस्ताः, तं ब्रह्मालङ्कारेणालंकुर्वन्ति । स  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ब्रह्मालङ्कारेणालंकृतो ब्रह्म विद्वान् ब्रह्मैवाभिप्रैति ॥ **३४** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+ब्रह्मालङ्कारेणालंकृतो ब्रह्म विद्वान् ब्रह्मैवाभिप्रैति ॥ **३४** ॥
+</details>
 
 फणः - भूषणम् । ब्रह्मवाभिप्रैति - ब्रह्मदर्शन उत्सुक एव भवति ।नाप्सरस्संभाषणवासोभूयणादिषु  
 सादर इत्यर्थः । शिष्टं स्पष्टम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स आगच्छत्यरं ह्रदम् । तन्मनसाऽत्येति । तमृत्वा संप्रतिविदो मज्जन्ति ॥ **३५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स आगच्छत्यरं ह्रदम् । तन्मनसाऽत्येति । तमृत्वा संप्रतिविदो मज्जन्ति ॥ **३५** ॥  
+</details>
 तमृत्वा - तं ह्रदं प्राप्य संप्रति - इदानीमपि विदः - ज्ञानिनः मज्जन्ति - स्नान्तीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स आगच्छति मुहूर्तान् यष्टिहान् । तेऽस्मादपद्रवन्ति ॥ **३६**॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स आगच्छति मुहूर्तान् यष्टिहान् । तेऽस्मादपद्रवन्ति ॥ **३६**॥  
+</details>
 तमनिरुन्धानाः दूरतो गच्छन्तीत्यर्थः ॥
 
 स आगच्छति विरजा नदीम् । तां मनसैवात्येति । तत् सुकृतदुष्कृते धूनुते ।  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तस्य प्रिया ज्ञातयः सुकृतमुपयन्ति ; अप्रिया दुष्कृतम् ॥ **३७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तस्य प्रिया ज्ञातयः सुकृतमुपयन्ति ; अप्रिया दुष्कृतम् ॥ **३७** ॥  
+</details>
 -  
 तत् - तदैवेत्यर्थः । अयञ्च तच्छब्दः नाव्यवहितविरजानद्यतिक्रमणकालबाची । अपि तु, ये वै  
 के चास्माल्लोकात् प्रयन्ति इति वाक्यनिर्दिष्टप्रयाणकालवाची । इदश्च वाक्यं गुणोपसंहारपादे चिन्तितम् -  
@@ -340,18 +710,48 @@ title = "०१"
 एतदीयप्रियाप्रियजनेषु एतदीयसुकृतदुष्कृतानुरूपेष्टानिष्टफलदित्सालक्षणमुपायनञ्च भवति ॥
 
 यथा रथेन धावन् रथचक्रे पर्यवेक्षते, एवमहोरात्रे पर्यवेक्षते । एवं सुकृतदुष्कृते,  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सर्वाणि च द्वन्द्वानि ॥ **३८** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सर्वाणि च द्वन्द्वानि ॥ **३८** ॥  
+</details>
 यथा रथेन धावन् पुरुषः स्वयं निर्व्यापार एव सन् व्याप्रियमाणरथचक्रादिकं साक्षितया पश्यन्  
 गमनक्रियाजनित शरीरायासादिशून्यस्सन् हृष्टो भवति । एवं प्रवर्तमानकालचक्रं सुकृतदुष्कृत-तत्साध्यद्वन्द्वपरम्परां  
 स्वानन्वितामेव पश्यन् निर्दुःखसुखमास्ते ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स एष विसुकृतो विदुष्कृतो ब्रह्म विद्वान् ब्रह्मैवाभिप्रैति ॥ **३९** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स एष विसुकृतो विदुष्कृतो ब्रह्म विद्वान् ब्रह्मैवाभिप्रैति ॥ **३९** ॥  
+</details>
 स्पष्टोऽर्थः ॥
 
 स आगच्छति तिल्यं वृक्षम् ; तं ब्रह्मगन्धः प्रविशति । स आगच्छति सालज्यं  
 संस्थानम् ; तं ब्रह्मरसः प्रविशति । स आगच्छति अपराजितमायतनम् ; तं ब्रह्मतेजः  
 प्रविशति । स आगच्छति इन्द्रप्रजापती द्वारगोपौ ; तावस्मादपद्रवतः । स आगच्छति  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विभुप्रमितम् ; तं ब्रह्मयशः प्रविशति ॥ **४०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विभुप्रमितम् ; तं ब्रह्मयशः प्रविशति ॥ **४०** ॥  
+</details>
 यथा प्रभाते अनुकलं आदित्यादिसामीप्यातिशयकृतं प्रकाशाधिक्यम् , एवं देशविशेषविशिष्ट-  
 ब्रह्मसान्निध्यातिशयानुकलसमेधमानविकासावस्थाविशेषाः ब्रह्मगन्धब्रह्मरसादिशब्दैरभिलप्यन्ते । ब्रह्मणः  
 सर्वगन्धत्वादेः, सर्वगन्धस्सर्वरसः इति प्रतिपत्रत्वात् यथाश्रुतार्थग्रहणेऽपि न दोषः । अपद्रवतः - तस्मै मार्ग  
@@ -359,45 +759,175 @@ title = "०१"
 
 स आगच्छति विचक्षणामासन्दीम् ; 'वृहद्रथन्तरे सामनी पूर्वौ पादौ  
 श्यैतनौधसे चापरौ पादौ । वैरूपवैराजे शाक्वररैवते तिरश्ची । सा प्रज्ञा । प्रज्ञया हि  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विपश्यति ॥ **४१** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+विपश्यति ॥ **४१** ॥  
+</details>
 सा प्रज्ञा - प्रज्ञाधिष्ठात्री देवता । तत्संबन्धादयं सर्वं पश्यतीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स आगच्छत्यमितौजसं पर्यङ्कम् ; स प्राणः ॥ **४२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+स आगच्छत्यमितौजसं पर्यङ्कम् ; स प्राणः ॥ **४२** ॥  
+</details>
 प्राणः - प्राणाभिमानीत्यर्थः । एवमुत्तरत्रापि द्रष्टव्यम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तस्य भूतं च भविष्यञ्च पूर्वौ पादौ । श्रीश्च इरा चापरौ ॥ **४३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तस्य भूतं च भविष्यञ्च पूर्वौ पादौ । श्रीश्च इरा चापरौ ॥ **४३** ॥  
+</details>
 भूतभविष्यत्कालैश्वर्यात्राभिमानिदेवताश्चत्वारः पादाः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वृहद्रथन्तरे अनूच्ये ॥ **४४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+वृहद्रथन्तरे अनूच्ये ॥ **४४** ॥  
+</details>
 बृहद्रथन्तराख्ये सामनी अनूचीनदारुणी इत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 भद्रयज्ञायज्ञीये शीर्षण्ये ॥ **४५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+भद्रयज्ञायज्ञीये शीर्षण्ये ॥ **४५** ॥  
+</details>
 भद्रयज्ञायज्ञीयाख्ये सामनी तिरश्चीनदारुणी ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ऋचश्च सामानि च प्राचीनाततम् ॥ **४६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+ऋचश्च सामानि च प्राचीनाततम् ॥ **४६** ॥  
+</details>
 प्राचीनाततं - पर्यङ्कातत दीर्घाः तान्तवरज्जुविशेषाः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 यजूंषि तिरश्चीनानि ॥ **४७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+यजूंषि तिरश्चीनानि ॥ **४७** ॥  
+</details>
 तिर्यक्ततरज्जुविशेषाः॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सोमांशव उपस्तरणम् ॥ **४८** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सोमांशव उपस्तरणम् ॥ **४८** ॥  
+</details>
 चन्द्रकिरणा एवाऽऽस्तरणम्॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 उद्गीथ उपश्रीः ॥ **४९** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+उद्गीथ उपश्रीः ॥ **४९** ॥  
+</details>
 श्रीसमीपे वर्तमानमास्तरणमुद्गीथः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 श्रीरुपबर्हणम् ॥ **५०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+श्रीरुपबर्हणम् ॥ **५०** ॥  
+</details>
 उपबर्हणं - पादोपधानम् ॥
 
 तस्मिन् ब्रह्मास्ते । तमित्थंवित् पादेनैवाग्र आरोहति । तं ब्रह्माह, कोऽसीति ।  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तं प्रतिब्रूयात् ॥ **५१** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तं प्रतिब्रूयात् ॥ **५१** ॥  
+</details>
 स्पष्टोऽर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ऋतुरस्म्यार्तवोऽस्मि ॥ **५२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+ऋतुरस्म्यार्तवोऽस्मि ॥ **५२** ॥  
+</details>
 अयञ्च मन्त्रखण्डः प्राग्व्याकृतः ॥
 
 आकाशाद्योनेः संभूतो भयायैतत् संवत्सरस्य तेजोभूतस्य भूतस्य भूतस्यात्मा  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 त्वमात्माऽसि । यस्त्वमसि सोऽहमस्मीति ॥ **५३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+त्वमात्माऽसि । यस्त्वमसि सोऽहमस्मीति ॥ **५३** ॥  
+</details>
 आकाशात् योने: - अथैतमेवाध्वानं पुनर्निवर्तन्ते यथैतमाकाशम् आकाशाद्वायुम् । वायुर्भूत्वा  
 धूमो भवति (छां.उ. ५-१०-५) इति श्रुत्युक्तरीत्या आकाशवाय्वादिक्रमेणावरुह्य, योनेश्शरीरम् (ब.सू. ३-१-२७)  
 इति सूत्रोक्तरीत्या योनेस्संभूतोऽस्मि । भयायैतत् - एतत् भवनभयं भयहेतुः । संवत्सरस्य - संवत्सरे,  
@@ -408,21 +938,71 @@ title = "०१"
 मोहश्रमं प्रयातोऽसौ वासनारेणुकुण्ठितः ॥ (वि.पु.६-७-१९)  
 इति न्यायेन संसारे पतितोऽस्मीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आत्मासीति ॥ **५४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+आत्मासीति ॥ **५४** ॥  
+</details>
 मम वशमात्पत्वमित्यत्राह - आत्मासि - व्यापकोऽसीत्यर्थः । व्यापकत्वादात्मत्वमुपपद्यत इति भावः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तमाह कोऽहमस्पीति ॥ **५५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तमाह कोऽहमस्पीति ॥ **५५** ॥  
+</details>
 यस्त्वमसि सोऽहमस्मीत्युक्तम् । अहं वा क इति पृच्छतीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सत्यपिति ब्रूयात् ॥ **५६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+सत्यपिति ब्रूयात् ॥ **५६** ॥  
+</details>
 उत्तरमाह - सत्यमिति ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 किं तत् , यत् सत्यमिति ॥ **५७** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+किं तत् , यत् सत्यमिति ॥ **५७** ॥  
+</details>
 पुनः पृच्छति - किं तत् , यत् सत्यमिति ॥
 
 यदन्यत् देवेभ्यश्च प्राणेभ्यश्च, तत् सत् । अथ यत् देवाश्च प्राणाश्च, तत् सत्यम् ।  
 तदेतया वाचाऽभिव्याह्रियते सत्यमिति । एतावदिदम् । सर्वमिदम् । सर्वपस्मीत्येवैनं  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तदाह ॥ **५८** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तदाह ॥ **५८** ॥  
+</details>
 'तदेतत् श्लोकेनाप्युक्तम् -  
 यजूदरः सामशिरा असावृङ्गर्तिरव्ययः ।  
 स ब्रह्मेति हि विज्ञेयः ऋषिर्ब्रह्ममयो महान् ॥ इति ।  
@@ -430,38 +1010,128 @@ title = "०१"
 संगृहीतं भवति । ततश्च सत्यमस्मीत्युक्ते सर्वमस्मीत्युक्तं स्यादित्यर्थः । ततश्च सर्वेषामात्मैव मदात्मेत्यर्थः ॥
 
 तमाह - केन मे पौस्नानि नामान्याप्नोषीति । प्राणेनेति ब्रूयात् । केन स्त्रीनामानीति ।  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 वाचेति । केन नपुंसकनामानीति । मनसेति ॥ **५९** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+वाचेति । केन नपुंसकनामानीति । मनसेति ॥ **५९** ॥  
+</details>
 देहेन्द्रियमन: प्राणज्ञानव्यतिरेकं प्रश्नोत्तरव्याजेन स्पष्टयति - नपुंसकत्वादीनि गुणत्रयोन्मेषविशेषरूपाणि ;  
 न तु आत्मस्वरूपगतानि । ततश्च तादृशधर्मयुक्तमनोवाक्प्राण निष्ठान्येव नपुंसकत्वस्त्रीत्वपुंस्त्वानि । अतः  
 त्संबन्धादात्मनि लिङ्गसंबन्ध इति भावः । प्राणादीनां तृतीयानिर्देशन करणत्वप्रतीतेः स्वस्य कर्तृत्वप्रतीतेश्च  
 मनोवाक्प्राणव्यतिरेक सिद्धः । एवमुत्तरत्रापि द्रष्टव्यम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 केन गन्धानिति घ्राणेनेति ॥ **६०** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+केन गन्धानिति घ्राणेनेति ॥ **६०** ॥  
+</details>
 घ्राणेन गन्धान् जानामीति ब्रूयादित्यर्थः । एवमुत्तरत्रापि यथायोग्यमन्वयः तत्तदिन्द्रियव्यतिरेकश्च बोध्यः ॥
 
 केन रूपाणीति । चक्षुषेति । केन शब्दानिति । श्रोत्रेणेति । केन  
 रसानिति । जिह्वयेति । केन कर्माणीति हस्ताभ्यामिति । केन सुखदुःखे इति ।  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 शरीरेणेति ॥ **६१** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+शरीरेणेति ॥ **६१** ॥  
+</details>
 अशरीरं वाव सन्तं न प्रियाप्रिये स्पृशतः (छा.उ. ८-१२-१) इति श्रुतेः । वैषयिकसुखदुःखयोः  
 शरीरहेतुकत्वात् शरीरस्य च करणतया निर्देशः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 केनाऽऽनन्दं रतिं प्रजातिमिति । उपस्थेनेति ॥ **६२** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+केनाऽऽनन्दं रतिं प्रजातिमिति । उपस्थेनेति ॥ **६२** ॥  
+</details>
 प्रजातिः - प्रजननम् ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 केनेत्या इति । पादाभ्यामिति ॥ **६३** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+केनेत्या इति । पादाभ्यामिति ॥ **६३** ॥  
+</details>
 इत्या: - गमनानीत्यर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 केन धियो विज्ञातव्यं कामानिति ॥ **६४** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+केन धियो विज्ञातव्यं कामानिति ॥ **६४** ॥  
+</details>
 ज्ञानविषयान् इच्छाविषयांश्चेत्यर्थः । ज्ञानेच्छादिकं केनाप्नोषीति पर्यवसितोऽर्थः ॥
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रज्ञयेति ब्रूयात् ॥ **६५** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+प्रज्ञयेति ब्रूयात् ॥ **६५** ॥  
+</details>
 प्रज्ञया - मनसेत्यर्थः
 
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तमाह - आपो वै खलु मे ह्यसावयं ते लोक इति ॥ **६६** ॥  
+</details>
+
+<details><summary>मूलम्</summary>
+
+तमाह - आपो वै खलु मे ह्यसावयं ते लोक इति ॥ **६६** ॥  
+</details>
 लोक: असौ अमृतस्य आपः भुज्यन्ते । तवाऽप्यसौ लोको भोग्य इत्यर्थः ॥
 
 सा या ब्रह्मणो जिति: या व्यष्टिः, तां जितिं जयति तां व्यष्टिं व्यश्नुते, य  
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 एवं वेद य एवं वेद ॥ **६७** ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+एवं वेद य एवं वेद ॥ **६७** ॥
+</details>
 
 ॥ इति प्रथमोऽध्यायः ॥
 
